# jacquard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  codegen_plan.md  dist-workspace.toml  flake.nix  justfile  lexicons.kdl  llms.txt  regen.rs  rustdoc-host.nix
crates/jacquard/: Cargo.toml
crates/jacquard-api/: Cargo.toml
crates/jacquard-api/lexicons/: app_blebbit_authr_folder_authzed.json  app_blebbit_authr_folder_createFolder.json  app_blebbit_authr_folder_createFolderRelationship.json  app_blebbit_authr_folder_defs.json  app_blebbit_authr_folder_deleteFolder.json  app_blebbit_authr_folder_deleteFolderRelationship.json  app_blebbit_authr_folder_getFolder.json  app_blebbit_authr_folder_getFolders.json  app_blebbit_authr_folder_record.json  app_blebbit_authr_folder_updateFolder.json  app_blebbit_authr_folder_updateFolderRelationship.json  app_blebbit_authr_group_authzed.json  app_blebbit_authr_group_createGroup.json  app_blebbit_authr_group_createGroupRelationship.json  app_blebbit_authr_group_defs.json  app_blebbit_authr_group_deleteGroup.json  app_blebbit_authr_group_deleteGroupRelationship.json  app_blebbit_authr_group_getGroup.json  app_blebbit_authr_group_getGroups.json  app_blebbit_authr_group_record.json  app_blebbit_authr_group_updateGroup.json  app_blebbit_authr_group_updateGroupRelationship.json  app_blebbit_authr_page_authzed.json  app_blebbit_authr_page_createPage.json  app_blebbit_authr_page_createPageRelationship.json  app_blebbit_authr_page_defs.json  app_blebbit_authr_page_deletePage.json  app_blebbit_authr_page_deletePageRelationship.json  app_blebbit_authr_page_getPage.json  app_blebbit_authr_page_getPages.json  app_blebbit_authr_page_record.json  app_blebbit_authr_page_updatePage.json  app_blebbit_authr_page_updatePageRelationship.json  app_bsky_actor_defs.json  app_bsky_feed_defs.json  app_bsky_feed_threadgate.json  app_bsky_graph_follow.json  app_ocho_auth_atProtoCallback.json  app_ocho_auth_authorize.json  app_ocho_auth_defs.json  (+431 more)
crates/jacquard-api/src/: app_blebbit.rs  app_bsky.rs  app_ocho.rs  app_rocksky 2.rs  beauty_cybernetic.rs  blog_pckt.rs  blue__2048.rs  blue_atplane.rs  blue_linkat.rs  blue_rito.rs  blue_zio.rs  buzz_bookhive.rs  club_stellz.rs  com_atproto.rs  com_bad_example.rs  com_crabdance.rs  com_shinolabs.rs  community_lexicon.rs  dev_baileytownsend.rs  dev_fudgeu.rs  dev_ocbwoy3.rs  dev_regnault.rs  did_plc_jh6yfs5dk47kykvhp7r6qwrb.rs  events_smokesignal.rs  fyi_frontpage.rs  fyi_unravel.rs  garden_lexicon.rs  how_bun.rs  inc_toronto.rs  lib.rs  lol_atmo.rs  lol_skittr.rs  moe_karashiiro.rs  my_skylights.rs  net_aftertheinter.rs  net_altq.rs  net_anisota.rs  net_bnewbold.rs  net_mmatt.rs  network_slices.rs  (+15 more)
crates/jacquard-api/src/app_blebbit/: authr.rs
crates/jacquard-api/src/app_bsky/: actor.rs  bookmark.rs  embed.rs  feed.rs  graph.rs  labeler.rs  notification.rs  unspecced.rs  video.rs
crates/jacquard-api/src/app_ocho/: auth.rs  edu.rs  message.rs  payment.rs  plugin.rs  push.rs  server.rs  state.rs
crates/jacquard-api/src/app_rocksky/: actor.rs  album.rs  apikey.rs  artist.rs  charts.rs  dropbox.rs  feed.rs  googledrive.rs  like.rs  player.rs  playlist.rs  radio.rs  scrobble.rs  shout.rs  song.rs  spotify.rs  stats.rs
crates/jacquard-api/src/beauty_cybernetic/: trustcow.rs
crates/jacquard-api/src/blog_pckt/: blog.rs  post.rs  publication.rs  theme.rs
crates/jacquard-api/src/blue__2048/: game.rs  key.rs  player.rs  verification.rs
crates/jacquard-api/src/blue_atplane/: fav_client.rs
crates/jacquard-api/src/blue_linkat/: board.rs
crates/jacquard-api/src/blue_rito/: feed.rs  service.rs
crates/jacquard-api/src/blue_zio/: atfile.rs
crates/jacquard-api/src/buzz_bookhive/: book.rs  buzz.rs  get_book.rs  get_profile.rs  hive_book.rs  search_books.rs
crates/jacquard-api/src/chat_bsky/: actor.rs  convo.rs  moderation.rs
crates/jacquard-api/src/club_stellz/: evm.rs
crates/jacquard-api/src/com_atproto/: admin.rs  identity.rs  label.rs  moderation.rs  repo.rs  server.rs  sync.rs  temp.rs
crates/jacquard-api/src/com_bad_example/: identity.rs
crates/jacquard-api/src/com_crabdance/: nandi.rs
crates/jacquard-api/src/com_shinolabs/: pinksea.rs
crates/jacquard-api/src/com_welistskyblue/: list.rs
crates/jacquard-axum/: Cargo.toml
crates/jacquard-axum/src/: did_web.rs  lib.rs  main.rs  service_auth.rs
crates/jacquard-axum/tests/: extractor_tests.rs  service_auth_tests.rs
crates/jacquard-common/: Cargo.toml  README.md
crates/jacquard-common/examples/: streaming_download.rs  streaming_upload.rs
crates/jacquard-common/src/: blob.rs  cid.rs  cowstr.rs  did.rs  error.rs  http_client.rs  ident_resolver.rs  into_static.rs  jetstream.rs  lib.rs  link.rs  macros.rs  service_auth.rs  session.rs  stream.rs  types.rs  websocket.rs  xrpc.rs
crates/jacquard-common/tests/: http_streaming.rs  streaming_integration.rs
crates/jacquard-derive/: Cargo.toml
crates/jacquard-derive/src/: lib.rs
crates/jacquard-derive/tests/: into_static.rs  lexicon.rs  open_union.rs
crates/jacquard-identity/: Cargo.toml
crates/jacquard-identity/src/: lib.rs  resolver.rs
crates/jacquard-lexicon/: Cargo.toml  build.rs  lexicons.kdl.example
crates/jacquard-lexicon/src/: cli.rs  codegen.rs  corpus.rs  error.rs  fetch.rs  fs.rs  lexicon.rs  lib.rs  output.rs  schema.rs  union_registry.rs
crates/jacquard-lexicon/tests/: regen_api.rs
crates/jacquard-oauth/: Cargo.toml
crates/jacquard-oauth/src/: atproto.rs  authstore.rs  client.rs  dpop.rs  error.rs  jose.rs  keyset.rs  lib.rs  loopback.rs  request.rs  resolver.rs  scopes.rs  session.rs  types.rs  utils.rs
crates/jacquard-repo/: Cargo.toml
crates/jacquard-repo/src/: error.rs  lib.rs  repo.rs
crates/jacquard-repo/tests/: firehose_stress.rs  interop.rs  large_proof_tests.rs  mst_diff_debug.rs  mst_diff_suite.rs
crates/jacquard/src/: client.rs  identity.rs  lib.rs  main.rs  moderation.rs  richtext.rs  streaming.rs
crates/jacquard/tests/: agent.rs  credential_session.rs  oauth_auto_refresh.rs  oauth_flow.rs  restore_pds_cache.rs  xrpc_derive.rs
(+895 files in other folders)
