[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Orual <orual@nonbinary.computer>"]

description = "A simple Rust project using Nix"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
