[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
edition = "2024"
version = "0.7.0"
authors = ["Orual <orual@nonbinary.computer>"]
#repository = "https://github.com/rsform/jacquard"
repository = "https://tangled.org/@nonbinary.computer/jacquard"
keywords = ["atproto", "at", "bluesky", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = [".direnv"]
homepage = "https://tangled.org/@nonbinary.computer/jacquard"
license = "MPL-2.0"

description = "Simple and powerful AT Protocol client library for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"
serde_html_form = "0.2"
serde_ipld_dagcbor = "0.6"
serde_repr = "0.1"

# Error handling
miette = "7.6"
thiserror = "2.0"

# trait stuff
trait-variant = "0.1.2"


bon = "3.8.0"

# Data types
bytes = "1.10"
smol_str = { version = "0.3", features = ["serde"] }
url = "2.5"
cid = { version = "0.11.1", features = ["serde", "std"] }
ipld-core = { version = "0.4.2", features = ["serde"] }

# Proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
heck = "0.5"
itertools = "0.14"
prettyplease = "0.2"

# HTTP
http = "1.3"
reqwest = { version = "0.12", default-features = false }

# Async and runtimes
tokio = { version = "1", default-features = false }
n0-future = "0.1"

# Observability
tracing = "0.1"

# Encoding and crypto building blocks
base64 = "0.22"
percent-encoding = "2.3"
urlencoding = "2.1.3"
rand_core = "0.6"

# Time
chrono = "0.4"

# Crypto curves and JOSE
p256 = "0.13"
jose-jwk = "0.1"

# Text processing
regex = "1.11"
webpage = { version = "2.0", default-features = false }
