[package]
name = "jacquard-api"
description = "Generated AT Protocol API bindings for Jacquard"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[package.metadata.docs.rs]
features = [ "bluesky", "other", "ufos" ]

[dependencies]
bon.workspace = true
bytes = { workspace = true, features = ["serde"] }
jacquard-common = { version = "0.3.0", path = "../jacquard-common" }
jacquard-derive = { version = "0.3.0", path = "../jacquard-derive" }
miette.workspace = true
serde.workspace = true
thiserror.workspace = true


[features]
default = [ "com_atproto", "com_bad_example"]
bluesky = [ "com_atproto", "app_bsky", "chat_bsky", "tools_ozone"]
other = ["sh_tangled", "sh_weaver", "pub_leaflet", "net_anisota", "events_smokesignal","network_slices", "tools_smokesignal", "com_whtwnd", "community_lexicon", "place_stream" ]
lexicon_community = ["community_lexicon", "my_skylights", "com_whtwnd", "social_psky", "lol_atmo", "blue_linkat"]
ufos = ["place_artwork", "moe_karashiiro", "dev_regnault", "buzz_bookhive", "place_artwork", "how_bun", "lol_atmo", "inc_toronto", "uk_ewancroft", "xyz_autonomylab", "lol_skittr", "win_tomo", "dev_fudgeu", "dev_ocbwoy3", "blog_pckt", "blue_rito", "com_welistskyblue", "net_bnewbold", "did_plc_jh6yfs5dk47kykvhp7r6qwrb"]
app_bsky = []
chat_bsky = []
com_atproto = []
tools_ozone = []
sh_tangled = []
sh_weaver = []
pub_leaflet = []
net_anisota = []
network_slices = []
place_atwork = []
tools_smokesignal = []
uk_ewancroft = []
xyz_autonomylab = []
place_artwork = []
moe_karashiiro = []
buzz_bookhive = []
dev_regnault = []
events_smokesignal = []
how_bun = []
lol_atmo = []
lol_skittr = []
win_tomo = []
inc_toronto = []
com_bad_example = []
dev_ocbwoy3 = []
dev_fudgeu = []
com_welistskyblue = []
blog_pckt = []
blue_rito = []
did_plc_jh6yfs5dk47kykvhp7r6qwrb = []
net_bnewbold = []
win_tomo_x = []
com_shinolabs = []
fyi_unravel = []
blue_zio = []
blue_linkat = []
com_whtwnd = []
community_lexicon = []
social_psky = []
place_stream = []
my_skylights = []
