[package]
name = "jacquard-api"
description = "Generated AT Protocol API bindings for Jacquard"
edition.workspace = true
version = "0.6.1"
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[package.metadata.docs.rs]
features = [ "bluesky", "other", "lexicon_community", "ufos", "streaming" ]

[dependencies]
bon.workspace = true
bytes = { workspace = true, features = ["serde"] }
jacquard-common = { version = "0.6", path = "../jacquard-common" }
jacquard-derive = { version = "0.6", path = "../jacquard-derive" }
miette.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
thiserror.workspace = true


[lints.rust]
# just so that my rust-analyzer shuts up about the module name for 2048.blue's namespace
non_snake_case = "allow"

[features]
default = [ "minimal"]
minimal =  [ "com_atproto", "com_bad_example"]
bluesky = [ "com_atproto", "app_bsky", "chat_bsky", "tools_ozone", "minimal"]
other = ["sh_tangled", "sh_weaver", "pub_leaflet", "net_anisota", "network_slices", "tools_smokesignal", "com_whtwnd", "community_lexicon", "place_stream", "blue__2048", "minimal" ]
lexicon_community = ["community_lexicon", "my_skylights", "com_whtwnd", "social_psky", "blue_linkat", "minimal"]
ufos = [ "moe_karashiiro", "dev_regnault", "buzz_bookhive", "uk_ewancroft",  "win_tomo_x", "dev_fudgeu", "dev_ocbwoy3", "blog_pckt",  "net_bnewbold", "club_stellz", "dev_baileytownsend", "net_aftertheinter", "org_devcon","org_robocracy", "garden_lexicon", "social_clippr", "social_grain", "social_pmsky", "com_crabdance", "app_blebbit", "app_ocho", "uk_skyblur", "us_polhem", "blue_atplane", "net_mmatt", "minimal", "app_rocksky"]

streaming = ["jacquard-common/websocket"]

# --- generated ---
# Generated namespace features
app_blebbit = []
app_bsky = []
app_ocho = []
app_rocksky = []
beauty_cybernetic = []
blog_pckt = []
blue__2048 = []
blue_atplane = []
blue_linkat = []
blue_zio = []
buzz_bookhive = []
chat_bsky = []
club_stellz = []
com_atproto = []
com_bad_example = []
com_crabdance = []
com_shinolabs = []
com_whtwnd = []
community_lexicon = []
dev_baileytownsend = []
dev_fudgeu = []
dev_ocbwoy3 = []
dev_regnault = []
events_smokesignal = []
fm_teal = []
fyi_frontpage = []
fyi_unravel = []
garden_lexicon = []
moe_karashiiro = []
my_skylights = []
net_aftertheinter = []
net_altq = []
net_anisota = ["app_bsky"]
net_bnewbold = []
net_mmatt = []
network_slices = []
org_devcon = []
org_robocracy = []
place_atwork = []
place_stream = ["app_bsky"]
pub_leaflet = []
sh_tangled = []
sh_weaver = ["app_bsky"]
social_clippr = []
social_grain = []
social_pmsky = []
social_psky = []
tools_ozone = ["chat_bsky", "com_atproto"]
tools_smokesignal = []
uk_ewancroft = []
uk_skyblur = []
us_polhem = []
win_tomo_x = []
