[package]
name = "jacquard-axum"
edition.workspace = true
version = "0.4.0"
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
description = "Axum server helpers for Jacquard"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jacquard_axum"
path = "src/main.rs"


[dependencies]
axum = "0.8.6"
axum-macros = "0.5.0"
bytes.workspace = true
jacquard = { version = "0.4", path = "../jacquard" }
jacquard-common = { version = "0.4", path = "../jacquard-common", features = ["reqwest-client"] }
miette.workspace = true
serde.workspace = true
serde_html_form.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }

[dev-dependencies]
axum-test = "18.1.0"
tokio-test = "0.4.4"
