[package]
name = "jacquard-axum"
edition.workspace = true
version = "0.6.0"
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
description = "Axum server helpers for Jacquard"

[lib]
path = "src/lib.rs"

[[example]]
name = "axum_server"
path = "../../examples/axum_server.rs"

[dependencies]
axum = "0.8.6"
bytes.workspace = true
jacquard = { version = "0.6", path = "../jacquard", default-features = false, features = ["api"] }
jacquard-common = { version = "0.6", path = "../jacquard-common", features = ["reqwest-client"] }
jacquard-derive = { version = "0.6", path = "../jacquard-derive" }
jacquard-identity = { version = "0.6", path = "../jacquard-identity", optional = true }
miette.workspace = true
multibase = { version = "0.9.1", optional = true }
serde.workspace = true
serde_html_form.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["trace", "tracing"] }
tracing = "0.1.41"

[features]
default = ["service-auth"]
service-auth = ["jacquard-common/service-auth", "dep:jacquard-identity", "dep:multibase"]

[dev-dependencies]
axum-macros = "0.5.0"
axum-test = "18.1.0"
base64.workspace = true
chrono.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
miette = { workspace = true, features = ["fancy"] }
rand = "0.8"
reqwest.workspace = true
serde_json.workspace = true
#tokio-test = "0.4.4"
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
