[package]
name = "jacquard-common"
description = "Core AT Protocol types and utilities for Jacquard"
edition.workspace = true
version = "0.5.0"
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true


[dependencies]
bon.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
cid = { version = "0.11.1", features = ["serde", "std"] }
ipld-core = { version = "0.4.2", features = ["serde"] }
langtag = { version = "0.4.0", features = ["serde"] }
miette.workspace = true
multibase = "0.9.1"
multihash = "0.19.3"
ouroboros = "0.18.5"
rand = "0.9.2"
regex = "1.11.3"
serde.workspace = true
serde_html_form.workspace = true
serde_json.workspace = true
serde_with.workspace = true
smol_str.workspace = true
thiserror.workspace = true
url.workspace = true
http.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
reqwest = { workspace = true, optional = true, features = ["charset", "http2", "json", "system-proxy", "gzip", "rustls-tls"] }
serde_ipld_dagcbor.workspace = true
trait-variant.workspace = true

[features]
default = []
crypto = []
crypto-ed25519 = ["crypto", "dep:ed25519-dalek"]
crypto-k256 = ["crypto", "dep:k256"]
crypto-p256 = ["crypto", "dep:p256"]
reqwest-client = ["dep:reqwest"]

[dependencies.ed25519-dalek]
version = "2"
optional = true
default-features = false
features = ["pkcs8"]

[dependencies.k256]
version = "0.13"
optional = true
default-features = false
features = ["arithmetic"]

[dependencies.p256]
workspace = true
optional = true
features = ["arithmetic"]

[package.metadata.docs.rs]
features = [ "crypto-k256", "crypto-k256", "crypto-p256"]
