[package]
name = "jacquard-common"
description = "Core AT Protocol types and utilities for Jacquard"
edition.workspace = true
version = "0.7.0"
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[features]
default = ["service-auth", "reqwest-client", "crypto"]
crypto = []
crypto-ed25519 = ["crypto", "dep:ed25519-dalek"]
crypto-k256 = ["crypto", "dep:k256", "k256/ecdsa"]
crypto-p256 = ["crypto", "dep:p256", "p256/ecdsa"]
service-auth = ["crypto-k256", "crypto-p256", "dep:signature"]
reqwest-client = ["dep:reqwest"]
tracing = ["dep:tracing"]
streaming = ["n0-future", "futures"]
websocket = ["streaming", "tokio-tungstenite-wasm", "dep:ciborium"]
zstd = ["dep:zstd"]

[dependencies]
trait-variant.workspace = true
bon.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
cid = { version = "0.11.1", features = ["serde", "std"] }
ipld-core = { version = "0.4.2", features = ["serde"] }
langtag = { version = "0.4.0", features = ["serde"] }
miette.workspace = true
multibase = "0.9.1"
multihash = "0.19.3"
ouroboros = "0.18.5"
rand = "0.9.2"
regex = "1.11.3"
serde.workspace = true
serde_html_form.workspace = true
serde_json.workspace = true
smol_str.workspace = true
thiserror.workspace = true
url.workspace = true
http.workspace = true

reqwest = { workspace = true, optional = true, features = ["json", "charset", "gzip", "stream"] }
serde_ipld_dagcbor.workspace = true
signature = { version = "2", optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }

# Streaming support (optional)
n0-future = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
tokio-tungstenite-wasm = { version = "0.4", features = ["rustls-tls-native-roots"], optional = true }
ciborium = {version = "0.2.0", optional = true }
genawaiter = { version = "0.99.1", features = ["futures03"] }
zstd = { version = "0.13", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, optional = true, features = [ "http2", "system-proxy", "rustls-tls"] }
tokio-util = { version = "0.7.16", features = ["io"] }



[dependencies.ed25519-dalek]
version = "2"
optional = true
default-features = false
features = ["pkcs8"]

[dependencies.k256]
version = "0.13"
optional = true
default-features = false
features = ["arithmetic"]

[dependencies.p256]
workspace = true
optional = true
features = ["arithmetic"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
futures-lite = "2.6"

[package.metadata.docs.rs]
features = [ "crypto-k256", "crypto-k256", "crypto-p256",  "websocket", "zstd", "service-auth", "reqwest-client", "crypto"]
