[package]
name = "jacquard-derive"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
documentation.workspace = true
exclude.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
itertools = "0.14.0"
jacquard-common = { version = "0.1.0", path = "../jacquard-common" }
jacquard-lexicon = { version = "0.1.0", path = "../jacquard-lexicon" }
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
quote = "1.0.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.14.1"
syn = "2.0.106"
