[package]
name = "jacquard-derive"
description = "Procedural macros for Jacquard lexicon types"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
itertools.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
syn.workspace = true


[dev-dependencies]
jacquard-common = { version = "0.4", path = "../jacquard-common" }
