[package]
name = "jacquard-derive"
description = "Procedural macros for Jacquard lexicon types"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
jacquard-common = { version = "0.7", path = "../jacquard-common" }
serde.workspace = true
serde_json.workspace = true
