[package]
name = "jacquard-identity"
edition.workspace = true
version = "0.4.0"
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
description = "ATProto identity resolution utilities for Jacquard"

[features]
dns = ["dep:hickory-resolver"]

[dependencies]
async-trait.workspace = true
bon.workspace = true
bytes.workspace = true
jacquard-common = { version = "*", path = "../jacquard-common", features = ["reqwest-client"] }
jacquard-api = {  version = "*", path = "../jacquard-api" }
percent-encoding.workspace = true
reqwest.workspace = true
url.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
hickory-resolver = { optional = true, version = "0.24", default-features = false, features = ["system-config", "tokio-runtime"]}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
http.workspace = true
serde_html_form.workspace = true
urlencoding.workspace = true
