[package]
name = "jacquard-identity"
edition.workspace = true
version = "0.5.3"
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
description = "ATProto identity resolution utilities for Jacquard"

[features]
dns = ["dep:hickory-resolver"]
tracing = ["dep:tracing"]
streaming = ["jacquard-common/streaming", "dep:n0-future"]

[dependencies]
trait-variant.workspace = true
bon.workspace = true
bytes.workspace = true
jacquard-common = { version = "0.5", path = "../jacquard-common", features = ["reqwest-client"] }
jacquard-api = {  version = "0.5", path = "../jacquard-api", default-features = false, features = ["minimal"] }
percent-encoding.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
http.workspace = true
serde_html_form.workspace = true
urlencoding.workspace = true
tracing = { workspace = true, optional = true }
n0-future = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
hickory-resolver = { optional = true, version = "0.24", default-features = false, features = ["system-config", "tokio-runtime"]}
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
