[package]
name = "jacquard-lexicon"
description = "Lexicon schema parsing and code generation for Jacquard"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[[bin]]
name = "jacquard-codegen"
path = "src/bin/codegen.rs"

[dependencies]
clap.workspace = true
heck.workspace = true
itertools.workspace = true
jacquard-common = { version = "0.3.0", path = "../jacquard-common" }
miette = { workspace = true, features = ["fancy"] }
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = { version = "3.23.0" }
