[package]
name = "jacquard-lexicon"
description = "Lexicon schema parsing and code generation for Jacquard"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[[bin]]
name = "jacquard-codegen"
path = "src/bin/codegen.rs"

[[bin]]
name = "lex-fetch"
path = "src/bin/lex_fetch.rs"

[dependencies]
async-trait = "0.1"
clap.workspace = true
glob = "0.3"
heck.workspace = true
#itertools.workspace = true
jacquard-api = {  version = "0.5", git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-common = { version = "0.5", features = [ "reqwest-client" ], git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-identity = { version = "0.5", git = "https://tangled.org/@nonbinary.computer/jacquard" }
kdl = "6"
miette = { workspace = true, features = ["fancy"] }
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
reqwest = { workspace = true, features = ["json", "http2", "system-proxy", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
syn.workspace = true
tempfile = "3.23"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = { version = "3.23.0" }

[package.metadata.binstall]
pkg-url = "https://github.com/rsform/jacquard/releases/download/v{ version }/{ name }_{ target }_v{ version }{ archive-suffix }"
bin-dir = "{ name }_{ target }_v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "txz"
