[package]
name = "jacquard-oauth"
version = "0.3.0"
edition = "2024"
description = "AT Protocol OAuth 2.1 core types and helpers for Jacquard"
license = "MPL-2.0"

[dependencies]
jacquard-common = { version = "0.3.0", path = "../jacquard-common" }
jacquard-identity = { version = "0.3.0", path = "../jacquard-identity" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }
smol_str = { workspace = true }
base64.workspace = true
sha2 = { version = "0.10" }
thiserror = { workspace = true }
serde_html_form = { workspace = true }
miette = { workspace = true }
uuid = { version = "1", features = ["v4","std"] }
p256 = { workspace = true, features = ["ecdsa"] }
signature = "2"
rand_core.workspace = true
jose-jwa = "0.1"
jose-jwk = { workspace = true, features = ["p256"] }
chrono.workspace = true
elliptic-curve = "0.13.8"
http.workspace = true
bytes.workspace = true
rand = { version = "0.8.5", features = ["small_rng"] }
async-trait.workspace = true
dashmap = "6.1.0"
tokio = { workspace = true, features = ["sync", "net", "time"] }
reqwest.workspace = true
trait-variant.workspace = true
webbrowser = { version = "0.8", optional = true }
rouille  = { version =  "3.6.2", optional = true }

[features]
default = []
loopback = ["dep:rouille"]
browser-open = ["dep:webbrowser"]
